# ModrinthModCounter

./: .gitignore  README.md  counter.py  pyproject.toml  template.html
.github/workflows/: publish_counter.yml
output/: modrinth_mod_counts.csv
